--- a/src/projects.json
+++ b/src/projects.json
@@ -1,7 +1,7 @@
 [
     {
         "title": "City Crime Data",
-        "description": "City Crime Data",
+        "description": "This is a test description i will add the proper one later",
         "link" : "https://trunten.github.io/ubbc-crime-data/",
         "image": "/images/crime-data.jpg",
         "languages": "html / css / javascript",
@@ -9,7 +9,7 @@
     },
     {
         "title": "Weather Dashboard",
-        "description": "",
+        "description": "This is a another test description but it's really long this time. I will add the proper one later",
         "link" : "https://trunten.github.io/ubbc-weather-dashboard/",
         "image": "/images/weather.jpg",
         "languages": "html / css / javascript"
@@ -19,20 +19,13 @@
         "description": "",
         "link" : "https://trunten.github.io/fm-password-generator/",
         "image": "/images/password.png",
-        "languages": ""
-    },
-    {
-        "title": "CSS Cheatsheet",
-        "description": "",
-        "link" : "https://trunten.github.io/css-cheatsheet/",
-        "image": "/images/css.jpg",
         "languages": "html / css / javascript"
     },
     {
-        "title": "Chat App Website",
+        "title": "Rock Paper Scissors",
         "description": "",
-        "link" : "https://trunten.github.io/fm-chat-app/",
-        "image": "/images/chat.png",
+        "link" : "https://trunten.github.io/fm-rock-paper-scissors/",
+        "image": "/images/rps.png",
         "languages": "html / css / javascript"
     },
     {
@@ -43,10 +36,24 @@
         "languages": "html / javascript"
     },
     {
-        "title": "Rock Paper Scissors",
+        "title": "Work Day Scheduler",
         "description": "",
-        "link" : "https://trunten.github.io/fm-rock-paper-scissors/",
-        "image": "/images/rps.png",
+        "link" : "https://trunten.github.io/ubbc-work-day-scheduler/",
+        "image": "/images/scheduler.png",
+        "languages": "html / css / jquery"
+    },
+    {
+        "title": "Word Guessing Game",
+        "description": "Old school hangman",
+        "link" : "https://trunten.github.io/word-guessing-game/",
+        "image": "/images/hangman.jpg",
+        "languages": "html / css / javascript"
+    },
+    {
+        "title": "CSS Cheatsheet",
+        "description": "",
+        "link" : "https://trunten.github.io/css-cheatsheet/",
+        "image": "/images/css.jpg",
         "languages": "html / css / javascript"
     },
     {
@@ -57,11 +64,11 @@
         "languages": "html / css / javascript"
     },
     {
-        "title": "Work Day Scheduler",
+        "title": "Chat App Website",
         "description": "",
-        "link" : "https://trunten.github.io/ubbc-work-day-scheduler/",
-        "image": "/images/scheduler.png",
-        "languages": "html / css / jquery"
+        "link" : "https://trunten.github.io/fm-chat-app/",
+        "image": "/images/chat.png",
+        "languages": "html / css / javascript"
     },
     {
         "title": "Future",
