updated home & contact, rmoved unsued assets, added CV

--- a/src/projects.json
+++ b/src/projects.json
@@ -84,7 +84,7 @@
         "title": "Future",
         "description": "",
         "link" : "https://trunten.github.io/python-gui-test/",
-        "image": "/images/placeholder1.jpg",
+        "image": "/images/placeholder.jpg",
         "languages": "watch this space"
     }
     
