moved images into src folder

--- a/src/projects.json
+++ b/src/projects.json
@@ -82,10 +82,10 @@
         "languages": "html / css / javascript"
     },
     {
-        "title": "Future",
+        "title": "Future Projects",
         "description": "I'm hard at work building my next project. Keep checking back to see my portfolio grow.",
         "link" : "https://trunten.github.io/python-gui-test/",
-        "image": "/images/placeholder.jpg",
+        "image": "/images/future.jpg",
         "languages": "watch this space"
     }
     
