--- a/src/projects.json
+++ b/src/projects.json
@@ -96,7 +96,7 @@
       "link" : "https://trunten.github.io/ubbc-readme-generator/",
       "gh": "https://github.com/trunten/ubbc-readme-generator",
       "image": "/images/readme.jpg",
-      "languages": "html / css / javascript",
+      "languages": "node / npm / javascript",
       "tags" : ["javascript", "js", "node", "npm", "cmd", "command line", "console"]
   },
     {
