--- a/src/projects.json
+++ b/src/projects.json
@@ -1,123 +1,135 @@
 [
-    {
-        "title": "City Crime Data",
-        "description": "A single page web app that allows you to search for local crime data statistics for any location in England.",
-        "link" : "https://trunten.github.io/ubbc-crime-data/",
-        "gh": "https://github.com/trunten/ubbc-crime-data",
-        "image": "crime-data.jpg",
-        "screenshot": "crime.png",
-        "languages": "html / bootstrap / javascript",
-        "tags" : ["html", "javascript", "css", "bootstrap", "api", "js", "jquery"],
-        "hero": "true"
-    },
-    {
-        "title": "Weather Dashboard",
-        "description": "A modern weather app for desktop and mobile. Search for the current weather and 5 day forecast in any location.",
-        "link" : "https://trunten.github.io/ubbc-weather-dashboard/",
-        "gh": "https://github.com/trunten/ubbc-weather-dashboard",
-        "image": "weather.jpg",
-        "screenshot": "weather.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "api", "js", "grid", "app", "weather"]
-    },
-    {
-        "title": "Password Generator",
-        "description": "Generate strong passwords of any length with ease.",
-        "link" : "https://trunten.github.io/fm-password-generator/",
-        "gh": "https://github.com/trunten/fm-password-generator",
-        "image": "padlock.jpg",
-        "screenshot": "password.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "js", "app"]
-    },
-    {
-        "title": "Rock Paper Scissors",
-        "description": "A fun Rock Paper Scissors game. Play solo or with a friend.",
-        "link" : "https://trunten.github.io/fm-rock-paper-scissors/",
-        "gh": "https://github.com/trunten/fm-rock-paper-scissors",
-        "image": "rps.png",
-        "screenshot": "rps.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "game"]
-    },
-    {
-        "title": "Pong Game",
-        "description": "Retro pong game. Relive the 70's with this modern classic.",
-        "link" : "https://trunten.github.io/js-canvas-pong/",
-        "gh": "https://github.com/trunten/js-canvas-pong",
-        "image": "pong.jpg",
-        "screenshot": "pong.png",
-        "languages": "html / javascript",
-        "tags" : ["html", "javascript", "js", "game"]
-    },
-    {
-        "title": "Work Day Scheduler",
-        "description": "GTD like a pro with this simple work day calendar app.",
-        "link" : "https://trunten.github.io/ubbc-work-day-scheduler/",
-        "gh": "https://github.com/trunten/ubbc-work-day-scheduler",
-        "image": "calendar.jpg",
-        "screenshot": "scheduler.png",
-        "languages": "html / bootstrap / jquery",
-        "tags" : ["html", "javascript", "css", "bootstrap", "api", "js", "jquery", "app", "weather"]
-    },
-    {
-        "title": "Word Guessing Game",
-        "description": "A simple word guessing game. Type letters on your keyboard to try and solve the puzzle.",
-        "link" : "https://trunten.github.io/word-guessing-game/",
-        "gh": "https://github.com/trunten/word-guessing-game",
-        "image": "letters.jpg",
-        "screenshot": "word.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "game", "emoji"]
-    },
-    {
-        "title": "CSS Cheatsheet",
-        "description": "CSS Snippets for Flexbox, Grid and more. All at your fingertips in a click.",
-        "link" : "https://trunten.github.io/css-cheatsheet/",
-        "gh": "https://github.com/trunten/css-cheatsheet",
-        "image": "css.jpg",
-        "screenshot": "css.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "css", "grid"]
-    },
-    {
-        "title": "Time Tracker",
-        "description": "Demo application displaying my skills in responsive design with CSS grid and updating content from external data",
-        "link" : "https://trunten.github.io/fm-time-tracker/",
-        "gh": "https://github.com/trunten/fm-time-tracker",
-        "image": "time.jpg",
-        "screenshot": "time.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "js", "grid"]
-    },
-    {
-        "title": "Chat App Website",
-        "description": "CSS Design challenge. A simple landing page for a fictitious mobile app showcasing repsonive design and js DOM manipulation.",
-        "link" : "https://trunten.github.io/fm-chat-app/",
-        "gh": "https://github.com/trunten/fm-chat-app",
-        "image": "chat.png",
-        "screenshot": "chat.png",
-        "languages": "html / css / javascript",
-        "tags" : ["html", "javascript", "css", "js"]
-    },
-    {
-      "title": "Github Readme Generator",
-      "description": "A command line utility that produces a professional, high quality README file from the answers to a series of user input prompts.",
-      "link" : "https://trunten.github.io/ubbc-readme-generator/",
-      "gh": "https://github.com/trunten/ubbc-readme-generator",
-      "image": "readme.jpg",
-      "screenshot": "readme.png",
-      "languages": "node / npm / javascript",
-      "tags" : ["javascript", "js", "node", "npm", "cmd", "command line", "console"]
+  {
+    "pid": "1",
+    "title": "City Crime Data",
+    "description": "A single page web app that allows you to search for local crime data statistics for any location in England.",
+    "link" : "https://trunten.github.io/ubbc-crime-data/",
+    "gh": "https://github.com/trunten/ubbc-crime-data",
+    "image": "crime-data.jpg",
+    "screenshot": "crime.png",
+    "languages": "html / bootstrap / javascript",
+    "tags" : ["html", "javascript", "css", "bootstrap", "api", "js", "jquery"],
+    "hero": "true"
   },
-    {
-        "title": "Future Projects",
-        "description": "I'm hard at work building my next project. Keep checking back to see my portfolio grow.",
-        "link" : "https://trunten.github.io/python-gui-test/",
-        "image": "future.jpg",
-        "screenshot": "future.jpg",
-        "languages": "watch this space",
-        "tags" : ["future"]
-    }
+  {
+    "pid": "2",
+    "title": "Weather Dashboard",
+    "description": "A modern weather app for desktop and mobile. Search for the current weather and 5 day forecast in any location.",
+    "link" : "https://trunten.github.io/ubbc-weather-dashboard/",
+    "gh": "https://github.com/trunten/ubbc-weather-dashboard",
+    "image": "weather.jpg",
+    "screenshot": "weather.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "api", "js", "grid", "app", "weather"]
+  },
+  {
+    "pid": "3",
+    "title": "Password Generator",
+    "description": "Generate strong passwords of any length with ease.",
+    "link" : "https://trunten.github.io/fm-password-generator/",
+    "gh": "https://github.com/trunten/fm-password-generator",
+    "image": "padlock.jpg",
+    "screenshot": "password.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "js", "app"]
+  },
+  {
+    "pid": "4",
+    "title": "Rock Paper Scissors",
+    "description": "A fun Rock Paper Scissors game. Play solo or with a friend.",
+    "link" : "https://trunten.github.io/fm-rock-paper-scissors/",
+    "gh": "https://github.com/trunten/fm-rock-paper-scissors",
+    "image": "rps.png",
+    "screenshot": "rps.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "game"]
+  },
+  {
+    "pid": "5",
+    "title": "Pong!",
+    "description": "Retro pong game. Relive the 70's with this modern classic.",
+    "link" : "https://trunten.github.io/js-canvas-pong/",
+    "gh": "https://github.com/trunten/js-canvas-pong",
+    "image": "pong.jpg",
+    "screenshot": "pong.png",
+    "languages": "html / javascript",
+    "tags" : ["html", "javascript", "js", "game"]
+  },
+  {
+    "pid": "6",
+    "title": "Work Day Scheduler",
+    "description": "GTD like a pro with this simple work day calendar app.",
+    "link" : "https://trunten.github.io/ubbc-work-day-scheduler/",
+    "gh": "https://github.com/trunten/ubbc-work-day-scheduler",
+    "image": "calendar.jpg",
+    "screenshot": "scheduler.png",
+    "languages": "html / bootstrap / jquery",
+    "tags" : ["html", "javascript", "css", "bootstrap", "api", "js", "jquery", "app", "weather"]
+  },
+  {
+    "pid": "7",
+    "title": "Word Guessing Game",
+    "description": "A simple word guessing game. Type letters on your keyboard to try and solve the puzzle.",
+    "link" : "https://trunten.github.io/word-guessing-game/",
+    "gh": "https://github.com/trunten/word-guessing-game",
+    "image": "letters.jpg",
+    "screenshot": "word.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "game", "emoji"]
+  },
+  {
+    "pid": "8",
+    "title": "CSS Cheatsheet",
+    "description": "CSS Snippets for Flexbox, Grid and more. All at your fingertips in a click.",
+    "link" : "https://trunten.github.io/css-cheatsheet/",
+    "gh": "https://github.com/trunten/css-cheatsheet",
+    "image": "css.jpg",
+    "screenshot": "css.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "css", "grid"]
+  },
+  {
+    "pid": "9",
+    "title": "Time Tracker",
+    "description": "Demo application displaying my skills in responsive design with CSS grid and updating content from external data",
+    "link" : "https://trunten.github.io/fm-time-tracker/",
+    "gh": "https://github.com/trunten/fm-time-tracker",
+    "image": "time.jpg",
+    "screenshot": "time.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "js", "grid"]
+  },
+  {
+    "pid": "10",
+    "title": "Chat App Website",
+    "description": "CSS Design challenge. A simple landing page for a fictitious mobile app showcasing repsonive design and js DOM manipulation.",
+    "link" : "https://trunten.github.io/fm-chat-app/",
+    "gh": "https://github.com/trunten/fm-chat-app",
+    "image": "chat.png",
+    "screenshot": "chat.png",
+    "languages": "html / css / javascript",
+    "tags" : ["html", "javascript", "css", "js"]
+  },
+  {
+    "pid": "11",
+    "title": "Github Readme Generator",
+    "description": "A command line utility that produces a professional, high quality README file from the answers to a series of user input prompts.",
+    "link" : "https://trunten.github.io/ubbc-readme-generator/",
+    "gh": "https://github.com/trunten/ubbc-readme-generator",
+    "image": "readme.jpg",
+    "screenshot": "readme.png",
+    "languages": "node / npm / javascript",
+    "tags" : ["javascript", "js", "node", "npm", "cmd", "command line", "console"]
+  },
+  {
+    "pid": "12",
+    "title": "Future Projects",
+    "description": "I'm hard at work building my next project. Keep checking back to see my portfolio grow.",
+    "link" : "https://trunten.github.io/python-gui-test/",
+    "image": "future.jpg",
+    "screenshot": "future.jpg",
+    "languages": "watch this space",
+    "tags" : ["future"]
+  }
     
 ]
