--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Jonathan Davis' Portfolio",
+  "short_name": "Jonathan Davis",
   "name": "Profesional portfolio of work for Jonathan Davis - front-end engineer",
   "icons": [
     {
